--- a/src/app/organisms/room/PeopleDrawer.scss
+++ b/src/app/organisms/room/PeopleDrawer.scss
@@ -1,38 +1,23 @@
-.people-drawer-flexBox {
-  display: flex;
-  flex-direction: column;
-}
-.people-drawer-flexItem {
-  flex: 1;
-  min-height: 0;
-  min-width: 0;
-}
-
+@use '../../partials/flex';
+@use '../../partials/dir';
 
 .people-drawer {
-  @extend .people-drawer-flexBox;
+  @extend .cp-fx__column;
   width: var(--people-drawer-width);
   background-color: var(--bg-surface-low);
-  border-left: 1px solid var(--bg-surface-border);
-
-  [dir=rtl] & {
-    border: {
-      left: none;
-      right: 1px solid var(--bg-surface-hover);
-    }
-  }
+  @include dir.side(border, 1px solid var(--bg-surface-border), none);
 
   &__member-count {
     color: var(--tc-surface-low);
   }
 
   &__content-wrapper {
-    @extend .people-drawer-flexItem;
-    @extend .people-drawer-flexBox;
+    @extend .cp-fx__item-one;
+    @extend .cp-fx__column;
   }
 
   &__scrollable {
-    @extend .people-drawer-flexItem;
+    @extend .cp-fx__item-one;
   }
 
   &__noresult {
@@ -58,18 +43,12 @@
         z-index: 99;
       }
       & > .ic-raw {
-        left: var(--sp-tight);
-        [dir=rtl] & {
-          right: var(--sp-tight);
-          left: unset;
-        }
+        @include dir.prop(left, var(--sp-tight), unset);
+        @include dir.prop(left, unset, var(--sp-tight));
       }
       & > .ic-btn {
-        right: 2px;
-        [dir=rtl] & {
-          left: 2px;
-          right: unset;
-        }
+        @include dir.prop(right, 2px, unset);
+        @include dir.prop(left, unset, 2px);
       }
       & .input-container {
         flex: 1;
@@ -89,11 +68,7 @@
   & .segmented-controls {
     display: flex;
     margin-bottom: var(--sp-extra-tight);
-    margin-left: var(--sp-extra-tight);
-    [dir=rtl] & {
-      margin-left: unset;
-      margin-right: var(--sp-extra-tight);
-    }
+    @include dir.side(margin, var(--sp-extra-tight), 0);
   }
   & .segment-btn {
     flex: 1;
@@ -101,16 +76,8 @@
   }
 }
 .people-drawer__load-more {
-  padding: var(--sp-normal);
-  padding: {
-    bottom: 0;
-    right: var(--sp-extra-tight);
-  }
-
-  [dir=rtl] & {
-    padding-right: var(--sp-normal);
-    padding-left: var(--sp-extra-tight);
-  }
+  padding: var(--sp-normal) 0 0;
+  @include dir.side(padding, var(--sp-normal), var(--sp-extra-tight));
 
   & .btn-surface {
     width: 100%;
