--- a/src/app/organisms/welcome/Welcome.scss
+++ b/src/app/organisms/welcome/Welcome.scss
@@ -1,10 +1,12 @@
+@use '../../partials/flex';
+
 .app-welcome {
   width: 100%;
   height: 100%;
 
   & > div {
+    @extend .cp-fx__column--c-c;
     max-width: 600px;
-    align-items: center;
   }
   &__logo {
     width: 64px;
